// Copyright (c) Bodoconsult EDV-Dienstleistungen GmbH. All rights reserved.

// GRPC Copyright 2019 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.


syntax = "proto3";

import "google/protobuf/any.proto";

package Bodoconsult.App.GrpcBackgroundService;


service BusinessTransactionService {

	// Start a business transaction
	rpc StartTransaction(BusinessTransactionRequest) returns  (BusinessTransactionReply){}

}

/// <summary>
/// Request message to run a business transaction
/// </summary>
message BusinessTransactionRequest {
	 int32 TransactionId = 1;
	 string TransactionUid = 2;
	 google.protobuf.Any RequestData = 3;
}

/// <summary>
/// Reply to a request to run a business transaction
/// </summary>
message BusinessTransactionReply {

	int32 TransactionId = 1;
	string TransactionUid = 2;
	int32 ErrorCode = 3;
	string LogMessage = 4;
	string ExceptionMessage = 5;
	optional google.protobuf.Any ReplyData = 6;
}
